[metadata]
name = abacus
version = 0.0.1
description = Automatic sequential optimal investments.
author = Axel Nilsson
license = MIT
license_files = LICENSE
platforms = osx, unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = no
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
